[tool.poetry]
name = "sympath"
version = "0.1.0"
description = "Processing nested data structure with ease"
authors = ["Philipp Kessling"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8;<4"
loguru = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
coverage = "*"
pdoc3 = "*"
pre-commit = "*"
isort = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov-report html:tests/coverage --cov=sympath --capture=sys"

[tool.isort]
profile = "black"
